# fastvs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/: ci.yml
.github/workflows/: cd.yml  ci.yml
experiments/: plot.py
fastvs/: __init__.py  fastvs.pyi  helpers.py
src/: lib.rs  main.rs  pdistance.rs
tests/: simple.py  test_correctness.py  test_correctness_scipy.py  test_simple.py  test_speed.py  utils.py
