[tool.poetry]
name = "fastvs"
version = "0.1.1"
description = "Vector search on pandas dataframes."
authors = ["Shreya Shankar <shreyashankar@berkeley.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastvs"}]

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^14.0.1"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
maturin = "^1.3.2"
scipy = "^1.11.4"

[build-system]
requires = ["maturin>=1.3,<1.4"]
build-backend = "maturin"